	NULL printf function, so provide a dummy.

	* doc/flash.sgml: Document removal of printf functionality of
	cyg_flash_init() and document cyg_flash_set_printf() and
	cyg_flash_set_global_printf().

2009-02-13  Bart Veer  <bartv@ecoscentric.com>

	* doc/flash.sgml: remove incomplete sentence.

	* cdl/io_flash.cdl: remove CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM, no
	longer needed.

2008-11-23  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* doc/flash.sgml: Fix flash.h header name typos.

2008-11-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (cyg_flash_init): Allow repeated calls to
	change the printf function for all devices. There are
	times you don't any output, eg you are downloading an
	image over the serial port.

2008-08-29  Nick Garnett  <nickg@ecoscentric.com>

	* src/flashiodev.c (flashiodev_init): Assign
	CYG_DEVTAB_STATUS_BLOCK to status field of device table
	entries. This causes devfs to call the right read/write
	operations.

2008-06-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/flashdev.c (FLASH_TEST_LENGTH): Reduce to a
	multiple of 0x20000 as some flash parts (especially if
	they are in fact multiple chips in parallel) have that
	block size.
	Try opening jffs2test FIS partition if flashtest doesn't exist.

2007-05-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flashiodev.c (flashiodev_get_config): Support new
	CYG_IO_GET_CONFIG_FLASH_DEVADDR key to get flash device
	base address.
	* include/flash.h: Associated structure for key.
	* doc/flash.sgml: Document CYG_IO_GET_CONFIG_FLASH_DEVADDR.

2006-12-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/flash1.c: Replace FLASH_ERR_OK with CYG_FLASH_ERR_OK.
	* tests/flashdev.c: Ditto. Also flash_errmsg ->
	cyg_flash_errmsg. And some warning cleanups.

	* src/flashiodev.c (flashiodev_lookup): Correct misplaced else
	with respect to #ifdefs. Fix for bug 1000355.

2006-12-18  Nick Garnett  <nickg@ecoscentric.com>

	* src/flash_legacy.h (FLASH_Enable, FLASH_Disable): Add casts to